Clean up Clutches and KnockbackFFA modules: fix formatting, typos, and add Javadoc
Co-authored-by: Ya55in0 <62219093+Ya55in0@users.noreply.github.com>