@@ -1,24 +1,24 @@
 package de.teamholy.clutches;
 
-
+import com.google.common.reflect.ClassPath;
+import com.grinderwolf.swm.api.SlimePlugin;
+import com.grinderwolf.swm.api.loaders.SlimeLoader;
+import de.skydb.updater.BukkitUpdaterAPI;
 import de.teamholy.clutches.arena.ArenaType;
+import de.teamholy.clutches.commands.QuitCommand;
 import de.teamholy.clutches.commands.SpawnCMD;
 import de.teamholy.clutches.commands.VanishCommand;
 import de.teamholy.clutches.map.MapEntry;
 import de.teamholy.clutches.map.MapEntryHandler;
+import de.teamholy.clutches.npcskin.NPCSkin;
 import de.teamholy.clutches.player.PlayerEntry;
 import de.teamholy.clutches.player.PlayerEntryHandler;
 import de.teamholy.clutches.player.PlayerState;
-import de.teamholy.clutches.playground.commands.PlaygroundCommand;
 import de.teamholy.clutches.playground.PlaygroundManager;
+import de.teamholy.clutches.playground.commands.PlaygroundCommand;
 import de.teamholy.clutches.playground.commands.PresentedPresetCommand;
 import de.teamholy.clutches.task.ClutchTask;
 import de.teamholy.clutches.utils.PlayerUtils;
-import com.google.common.reflect.ClassPath;
-import com.grinderwolf.swm.api.SlimePlugin;
-import com.grinderwolf.swm.api.loaders.SlimeLoader;
-import de.teamholy.clutches.commands.QuitCommand;
-import de.teamholy.clutches.npcskin.NPCSkin;
 import de.teamholy.core.bukkit.BukkitCore;
 import de.teamholy.core.bukkit.npc.models.SkinEntry;
 import de.teamholy.core.bukkit.utils.ItemBuilder;
@@ -40,14 +40,16 @@ import org.bukkit.util.Vector;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Random;
-import de.skydb.updater.BukkitUpdaterAPI;
 
+/**
+ * Main plugin class for Clutches game mode.
+ */
 @Getter
 @Setter
 public class Clutches extends JavaPlugin {
 
     public static final String PREFIX = "§bClutches §8× §7";
-    @Getter
+    
     private static Clutches instance;
     private PlayerEntryHandler playerEntryHandler = new PlayerEntryHandler();
     private PlayerUtils playerUtils;
@@ -63,28 +65,29 @@ public class Clutches extends JavaPlugin {
     @Override
     public void onEnable() {
         instance = this;
-        new BukkitUpdaterAPI(this,"9bd6b569-b1f2-4b7e-ad27-9bc1a1e50d72","")
-            .setHibernat(true)
-            .setOnlyempty(true)
-            .setOnlyrestart(true);
+        new BukkitUpdaterAPI(this, "9bd6b569-b1f2-4b7e-ad27-9bc1a1e50d72", "")
+                .setHibernat(true)
+                .setOnlyempty(true)
+                .setOnlyrestart(true);
 
         slimePlugin = (SlimePlugin) Bukkit.getPluginManager().getPlugin("SlimeWorldManager");
         slimeLoader = slimePlugin.getLoader("mongodb");
 
-
-        mapEntryHandler.put("line", new MapEntry("Line",  new ItemBuilder(Material.WOOD, 1, (byte) 0).setName("§8» §6Line"), Arrays.asList(ArenaType.DIAGONAL_CLUTCH)));
+        mapEntryHandler.put("line", new MapEntry("Line", new ItemBuilder(Material.WOOD, 1, (byte) 0).setName("§8» §6Line"), Arrays.asList(ArenaType.DIAGONAL_CLUTCH)));
         mapEntryHandler.put("wood", new MapEntry("Wood", new ItemBuilder(Material.LOG, 1, (byte) 0).setName("§8» §6Wood"), null));
-        mapEntryHandler.put("rainbow", new MapEntry("Rainbow",  new ItemBuilder(Material.GLASS, 1, (byte) 1).setName("§8» §6Rainbow"), null));
-        mapEntryHandler.put("island", new MapEntry("Island", new ItemBuilder(Material.GRASS, 1, (byte) 0).setName("§8» §6Island"),Arrays.asList(ArenaType.EXPERIMENTAL,ArenaType.DIAGONAL_CLUTCH)));
+        mapEntryHandler.put("rainbow", new MapEntry("Rainbow", new ItemBuilder(Material.GLASS, 1, (byte) 1).setName("§8» §6Rainbow"), null));
+        mapEntryHandler.put("island", new MapEntry("Island", new ItemBuilder(Material.GRASS, 1, (byte) 0).setName("§8» §6Island"), Arrays.asList(ArenaType.EXPERIMENTAL, ArenaType.DIAGONAL_CLUTCH)));
         mapEntryHandler.put("cube", new MapEntry("Cube", new ItemBuilder(Material.STONE, 1, (byte) 0).setName("§8» §6Cube"), null));
         mapEntryHandler.put("mushroom", new MapEntry("Mushroom", new ItemBuilder(Material.BROWN_MUSHROOM, 1, (byte) 0).setName("§8» §6Mushroom"), null));
         mapEntryHandler.put("diagonal", new MapEntry("Diagonal", new ItemBuilder(Material.STICK, 1, (byte) 0).setName("§8» §6Diagonal §8(§fQuadratHose§8)"), null));
+        
         registerListener("de.teamholy.clutches.listeners");
         getCommand("spawn").setExecutor(new SpawnCMD());
         getCommand("quit").setExecutor(new QuitCommand());
         getCommand("playworld").setExecutor(new PlaygroundCommand());
         getCommand("playgroundpreset").setExecutor(new PresentedPresetCommand());
         getCommand("vanish").setExecutor(new VanishCommand());
+        
         hologramManager = new HologramManager();
         playgroundManager = new PlaygroundManager(this);
         new ClutchTask();
@@ -93,12 +96,10 @@ public class Clutches extends JavaPlugin {
             SkinEntry temp = new SkinEntry();
             temp.setUuid(value.getUuid());
             temp.fetch(skinEntry -> {
-                BukkitCore.getInstance().getNpcService().getSkinEntryHashMap().put(value.getUuid(),skinEntry);
-                System.out.println(value.getName() + " wurde gecached");
+                BukkitCore.getInstance().getNpcService().getSkinEntryHashMap().put(value.getUuid(), skinEntry);
+                getLogger().info(value.getName() + " was cached");
             });
         }
-
-
 
         for (World world : Bukkit.getWorlds()) {
             world.setMonsterSpawnLimit(0);
@@ -106,32 +107,37 @@ public class Clutches extends JavaPlugin {
             world.setTime(0);
             world.setGameRuleValue("doDaylightCycle", "false");
             world.setGameRuleValue("doMobSpawning", "false");
-            for (Entity ent : world.getEntities()) {
-                if (ent instanceof Animals || ent instanceof Monster) {
-                    ent.remove();
+            for (Entity entity : world.getEntities()) {
+                if (entity instanceof Animals || entity instanceof Monster) {
+                    entity.remove();
                 }
             }
         }
         startMoveListener();
     }
 
-
-
+    /**
+     * Registers event listeners from the specified package.
+     *
+     * @param path the package path containing listeners
+     */
     private void registerListener(final String path) {
         final ClassLoader classLoader = this.getClass().getClassLoader();
         try {
             for (final ClassPath.ClassInfo info : ClassPath.from(classLoader).getTopLevelClasses(path)) {
-                final Object obj = Class.forName(info.getName(), true, classLoader).newInstance();
+                final Object obj = Class.forName(info.getName(), true, classLoader).getDeclaredConstructor().newInstance();
                 if (obj instanceof Listener) {
                     this.getServer().getPluginManager().registerEvents((Listener) obj, this);
                 }
             }
-        } catch (IOException | InstantiationException | IllegalAccessException | ClassNotFoundException exception) {
-            exception.printStackTrace();
+        } catch (IOException | ReflectiveOperationException exception) {
+            getLogger().warning("Failed to register listener: " + exception.getMessage());
         }
     }
 
-
+    /**
+     * Starts the move listener task that monitors player positions.
+     */
     private void startMoveListener() {
         Bukkit.getScheduler().scheduleSyncRepeatingTask(this, () -> {
             for (PlayerEntry playerEntry : getPlayerEntryHandler().values()) {
@@ -140,10 +146,10 @@ public class Clutches extends JavaPlugin {
                     player.teleport(BukkitCore.getInstance().getLocationManager().getLocation("lobby"));
                 } else if (playerEntry.getPlayerState() == PlayerState.INGAME && player.getLocation().distance(playerEntry.getArenaEntry().getNpc()) > 400) {
                     player.teleport(playerEntry.getArenaEntry().getPlayerSpawn());
-                    player.playSound(player.getLocation(),Sound.ENDERMAN_TELEPORT,5,5);
+                    player.playSound(player.getLocation(), Sound.ENDERMAN_TELEPORT, 5, 5);
                     player.sendMessage(PREFIX + "You got out of map!");
                 } else if (playerEntry.getPlayerState() == PlayerState.PLAYGROUND && player.getLocation().getBlockY() < playerEntry.getPlaygroundPlayer().getPlaygroundWorld().getDeathHeight()) {
-                    player.setVelocity(new Vector(0,0,0));
+                    player.setVelocity(new Vector(0, 0, 0));
                     if (playerEntry.getPlaygroundPlayer().getPrivateWorld().isPresent()) {
                         playerEntry.getPlaygroundPlayer().getPrivateWorld().get().teleportPlayerToRandomSpawn(player);
                     } else {
@@ -156,4 +162,12 @@ public class Clutches extends JavaPlugin {
         }, 10, 5);
     }
 
+    /**
+     * Gets the plugin instance.
+     *
+     * @return the Clutches plugin instance
+     */
+    public static Clutches getInstance() {
+        return instance;
+    }
 }
